@@ -27,6 +27,13 @@ class WC_Payments_Notes_Additional_Payment_Methods {
 	const NOTE_ACTION = 'enable-upe';
 
 	/**
+	 * The account service instance.
+	 *
+	 * @var WC_Payments_Account
+	 */
+	private static $account;
+
+	/**
 	 * Get the note.
 	 */
 	public static function get_note() {
@@ -41,6 +48,13 @@ class WC_Payments_Notes_Additional_Payment_Methods {
 
 		if ( WC_Payments_Features::did_merchant_disable_upe() ) {
 			return;
+		}
+
+		// if the user hasn't connected their account (or the account got disconnected) do not add the note.
+		if ( self::$account instanceof WC_Payments_Account ) {
+			if ( false === self::$account->is_stripe_connected() ) {
+				return;
+			}
 		}
 
 		$note_class = WC_Payment_Woo_Compat_Utils::get_note_class();
@@ -81,12 +95,35 @@ class WC_Payments_Notes_Additional_Payment_Methods {
 			return;
 		}
 
-		// Enable UPE.
+		// once we get to this point, it means we should enable UPE,
+		// but we also need to check whether the account is connected or not.
+
+		// if we get to this point and the account is not connected,
+		// it means that the note has been displayed at some point, but the account got disconnected afterwards.
+		// in that case, let's redirect the user to the account connection page.
+		if ( self::$account instanceof WC_Payments_Account ) {
+			if ( false === self::$account->is_stripe_connected() ) {
+				// account is not connected, redirecting to connection page.
+				self::$account->redirect_to_onboarding_page( __( 'We detected a temporary issue with your account. Please try and connect your Stripe account.', 'woocommerce-payments' ) );
+
+				return;
+			}
+		}
+
+		// Enable UPE, deletes the note and redirect to onboarding task.
 		update_option( WC_Payments_Features::UPE_FLAG_NAME, '1' );
 		self::possibly_delete_note();
-
 		$wcpay_settings_url = admin_url( 'admin.php?page=wc-admin&task=woocommerce-payments--additional-payment-methods' );
 		wp_safe_redirect( $wcpay_settings_url );
 		exit;
+	}
+
+	/**
+	 * Sets the account service instance reference on the class.
+	 *
+	 * @param WC_Payments_Account $account account service instance.
+	 */
+	public static function set_account( WC_Payments_Account $account ) {
+		self::$account = $account;
 	}
 }
