@@ -1,8 +1,9 @@
 *** WooCommerce Payments Changelog ***
 
 = 2.8.2 - 2021-xx-xx =
+* Fix - If account is disconnected or not set up do not display onboarding task.
+* Fix - If account is disconnected or not set up do not display UPE inbox note.
 * Fix - Fix for the site acting as disconnected after the account cache expires.
-* Fix - If account is disconnected, redirect from onboarding to connect page.
 
 = 2.8.1 - 2021-08-04 =
 * Fix - Enable Multi-Currency only if there is a linked WooCommerce Payments account.
